--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="title_activity_reset_password">ResetPasswordActivity</string>
     <string name="btn_forgot_password">Forgot your password?</string>
     <string name="btn_reset_password">Reset Password</string>
+    <string name="btn_reset_password1">Reset Password</string>
     <string name="btn_back"><![CDATA[<< Back]]></string>
     <string name="hint_new_email">New Email</string>
     <string name="btn_change">Change</string>
@@ -40,13 +41,19 @@
     <string name="btn_sign_out">Sign Out</string>
     <string name="lbl_forgot_password">Forgot password?</string>
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Main Menu</string>
+    <string name="btn_create_new_deck">Create New Card Deck</string>
+    <string name="btn_existing_new_deck">Browse Existing Decks</string>
+    <string name="btn_user_deck">Your Decks</string>
+    <string name="welcome_msg">"Welcome to Flip N&apos; Learn, the app that lets you create your own eFlash cards!"</string>
+
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
+
 
     <!-- Strings related to Settings -->
 
