I have added the facebook login button, users can now login into flipNlearn using their existing facebook account.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="btn_send">Send</string>
     <string name="btn_remove">Remove</string>
     <string name="btn_sign_out">Sign Out</string>
+    <string name="btn_sign_in_google">Sign in with Google</string>
     <string name="lbl_forgot_password">Forgot password?</string>
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
     <string name="title_activity_main">Main Menu</string>
@@ -46,6 +47,7 @@
     <string name="btn_existing_new_deck">Browse Existing Decks</string>
     <string name="btn_user_deck">Your Decks</string>
     <string name="welcome_msg">"Welcome to Flip N&apos; Learn, the app that lets you create your own eFlash cards!"</string>
+    <string name="facebook_app_id">186567971821870</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
