--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
+    <string name="minimum_password">Invalid password! The password must contain 6 to 20 characters, have at least
+        1 digit, 1 lower case letter, and 1 upper case letter</string>
+    <string name="err_msg_password">Enter the password</string>
     <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -48,6 +50,8 @@
     <string name="btn_user_deck">Your Decks</string>
     <string name="welcome_msg">"Welcome to Flip N&apos; Learn, the app that lets you create your own eFlash cards!"</string>
     <string name="facebook_app_id">186567971821870</string>
+
+    <string name="sign_up_error_msg">The email address is already in use by another account.</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
