--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="title_activity_login">Sign in</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
-    <string name="hint_name">Fullname</string>
+    <string name="hint_name">Name</string>
     <string name="btn_login">LOGIN</string>
     <string name="btn_link_to_register">Not a member? Get registered with FlipNLearn now!</string>
     <string name="btn_link_to_login">Already registered. Login Me!</string>
@@ -40,6 +40,7 @@
     <string name="btn_change">Change</string>
     <string name="btn_send">Send</string>
     <string name="btn_remove">Remove</string>
+    <string name="btn_sign_in">Sign In</string>
     <string name="btn_sign_out">Sign Out</string>
     <string name="btn_sign_in_google">Sign in with Google</string>
     <string name="lbl_forgot_password">Forgot password?</string>
@@ -48,7 +49,10 @@
     <string name="btn_create_new_deck">Create New Card Deck</string>
     <string name="btn_existing_new_deck">Browse Existing Decks</string>
     <string name="btn_user_deck">Your Decks</string>
+    <string name="welcome_user_msg">Hello</string>
     <string name="welcome_msg">"Welcome to Flip N&apos; Learn, the app that lets you create your own eFlash cards!"</string>
+    <string name="enter_registered_email">Enter your registered email id</string>
+    <string name="failed_send_email">Failed to send reset email!</string>
     <string name="facebook_app_id">186567971821870</string>
 
     <string name="sign_up_error_msg">The email address is already in use by another account.</string>
