--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,8 +40,8 @@
     <string name="btn_change">Change</string>
     <string name="btn_send">Send</string>
     <string name="btn_remove">Remove</string>
-    <string name="btn_sign_in">Sign In</string>
-    <string name="btn_sign_out">Sign Out</string>
+    <string name="btn_sign_in">Log In</string>
+    <string name="btn_sign_out">Log Out</string>
     <string name="btn_sign_in_google">Sign in with Google</string>
     <string name="lbl_forgot_password">Forgot password?</string>
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
@@ -53,6 +53,7 @@
     <string name="welcome_msg">"Welcome to Flip N&apos; Learn, the app that lets you create your own eFlash cards!"</string>
     <string name="enter_registered_email">Enter your registered email id</string>
     <string name="failed_send_email">Failed to send reset email!</string>
+    <string name="password_reset_msg">"We have sent you instructions to reset your password!"</string>
     <string name="facebook_app_id">186567971821870</string>
 
     <string name="sign_up_error_msg">The email address is already in use by another account.</string>
@@ -70,7 +71,7 @@
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_general">Account</string>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
@@ -138,4 +139,5 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="title_activity_account">AccountActivity</string>
 </resources>
