--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
         1 digit, 1 lower case letter, and 1 upper case letter</string>
     <string name="err_msg_password">Enter the password</string>
     <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_sign_up_short">Sign up</string>
@@ -20,6 +20,7 @@
     </string>
     <string name="change_name">Change Name</string>
     <string name="change_email">Change Email</string>
+    <string name="hint_change_name">Enter a Name, or a New and Different Name from your Current Name</string>
     <string name="change_password">Change Password</string>
     <string name="send_password_reset_email">Send Password reset email</string>
     <string name="remove_user">Remove user</string>
@@ -28,6 +29,7 @@
     <string name="title_activity_login">Sign in</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
+    <string name="conf_hint_password">Confirm Password</string>
     <string name="hint_name">Name</string>
     <string name="hint_new_name">New Name</string>
     <string name="btn_login">LOGIN</string>
