--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="err_msg_password">Enter the password</string>
     <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
     <string name="prompt_password">Password</string>
+    <string name="old_prompt_password">Old Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_sign_up_short">Sign up</string>
@@ -23,7 +24,7 @@
     <string name="hint_change_name">Enter a Name, or a New and Different Name from your Current Name</string>
     <string name="change_password">Change Password</string>
     <string name="send_password_reset_email">Send Password reset email</string>
-    <string name="remove_user">Remove user</string>
+    <string name="delete_account">Delete Account</string>
     <string name="new_pass">New Password</string>
     <string name="title_activity_profile">FlipNLearn</string>
     <string name="title_activity_login">Sign in</string>
@@ -62,8 +63,16 @@
     <string name="cancel_text">Cancel</string>
 
     <string name="sign_up_error_msg">The email address is already in use by another account.</string>
-    <string name="no_email_entered">"Enter email address!"</string>
-    <string name="no_password_entered">"Enter password!"</string>
+    <string name="no_email_entered">"Enter email address"</string>
+    <string name="no_password_entered">"Enter password"</string>
+    <string name="no_old_password_entered">"Enter old password"</string>
+    <string name="no_new_password_entered">"Enter a new password"</string>
+    <string name="no_conf_new_password_entered">"Confirm the new password"</string>
+    <string name="passwords_do_not_match">"New password does not match Confirm password"</string>
+    <string name="new_password_match_old_password">"New password cannot match old password"</string>
+
+    <string name="delete_account_title">DELETE ACCOUNT</string>
+    <string name="delete_acoount_msg">"Are you sure you want to delete your account, you will lose all your flash cards?"</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
